<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Model.MainActivity"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/welcome_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5sp"
        android:paddingStart="10dp"
        android:text="Welcome"
        android:textSize="50sp"
        android:textColor="#2D2D2D"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="start" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_textview"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <!-- Profile button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="5dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/profile_icon_black" />


        </LinearLayout>


        <EditText
            android:id="@+id/Firstname_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First Name"
            android:padding="15dp"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:textColorHint="#2D2D2D" />

        <EditText
            android:id="@+id/lastname_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Last Name"
            android:padding="15dp"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:textColorHint="#2D2D2D" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:padding="15dp"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:textColorHint="#2D2D2D" />

        <EditText
            android:id="@+id/phonenumber_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone Number"
            android:padding="15dp"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:textColorHint="#2D2D2D" />


        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phonenumber_editText"
            android:layout_gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"

            android:text="Confirm User"
            android:textSize="20dp"
            android:textColor="#FFFFFF"
            android:fontFamily="sans-serif-condensed"
            android:background="#2D2D2D" />

    </LinearLayout>

</RelativeLayout>
