<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource">

    <EditText
        android:id="@+id/edit_text_event_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="Event Name"
        android:inputType="text"
        android:maxLength="50"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/edit_date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="Date"
        android:inputType="none"
        android:onClick="showDatePickerDialog"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_venue_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="Venue"
        android:inputType="text"
        android:maxLength="50"
        tools:ignore="LabelFor"/>

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onDeleteButtonClick"
        android:text="Delete" />

    <Button
        android:id="@+id/view_event_button"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:text="Go to Event Homepage" />

</LinearLayout>