<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Model.MainActivity">

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:text="Add an Event"
        android:textSize="40dp"
        android:textColor="#2D2D2D"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="start"
        android:padding="10sp" />

    <!-- Floating action button to add event -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_event_button"
        android:layout_width="wrap_content"
        android:layout_height="112dp"
        android:layout_below="@id/title_textview"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="181dp"
        android:layout_marginTop="299dp"
        android:layout_marginEnd="175dp"
        android:backgroundTint="#2D2D2D"
        android:src="@android:drawable/ic_input_add"
        android:textColorHint="#2D2D2D"
        tools:ignore="SpeakableTextPresentCheck" />

</RelativeLayout>
